# iu9-tfl-lab2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  checker.sh  conan.profile  conanfile.txt  issues.org  run.sh  shell.nix
benchmarks/: 0092840.json  0092840.md  2d346c3.json  2d346c3.md  f9af13c.md  queries
cmake/: FetchBoost.cmake  FetchGTest.cmake
include/learner/: learner.hpp
src/learner/: CMakeLists.txt  direction.cpp  direction.hpp  exits.hpp  labirinth.cpp  labirinth.hpp  labirinth_builder.cpp  labirinth_builder.hpp  learner.cpp  learner_impl.hpp  learner_test.cpp  main.cpp  mat_advanced12iq.cpp  mat_advanced12iq.hpp  mat_language.cpp  mat_language.hpp  min_prefix.hpp  table.cpp  table.hpp  table_builder.cpp  table_builder.hpp  teacher.cpp  teacher.hpp
test/: CMakeLists.txt
